2006-03-22  Titus Brown  <t@issola.caltech.edu>

	* Added Stephen Thorne's fix for multiple checkboxes with the same
	  name/different values.

2006-03-21  Titus Brown  <t@issola.caltech.edu>

	* Added 'acknowledge_equiv_refresh' option & added helpful
	  error message on infinite refresh detection (Leonardo Santagada).

	* Added in Stephen Thorne's fix for readonly-controls printout.

	* Added in Stephen Thorne's checkbox test & added 'on'/'off' for
	  checkbox stuff.

	* Added in Stephen Thorne's "with_default_realm" auth patch.

2006-03-17  Titus Brown  <t@issola.caltech.edu>

	* Added in Jeff Martin's ${variable} expansion patch.

	* List values can now be selected/deselected with +/-.

	* Checkboxes can now be set with True or a non-zero number, and
	  cleared with a False or '0'.

	* Switched over to using 'require success' instead of code 200
	  on some scripts.

	* Fixed a number of unknown options ;).

	* 'config' now fails on unknown options.

2006-03-15  Titus Brown  <t@issola.caltech.edu>

	* Moved utils.journey() function into TwillBrowser class as
	  _journey, refactored, simplified & eliminated _new_page()
	  method.

	* Added check_links extension module.

	* Added simple extension module documentation.

	* Added installation instructions.

2006-03-14  Titus Brown  <t@issola.caltech.edu>

	* Added list of known problems.

	* Added Web testing programs for Perl & PHP to docs.

2006-03-09  Titus Brown  <t@issola.caltech.edu>

	* Switched mechanize default encodings over to utf-8 (Terry
	  Peppers, many others!)

2006-03-06  Titus Brown  <t@issola.caltech.edu>

	* fixed twill.shell.main() so that -i flag makes interact run
	  even on failure exit.  (Kieran Holland)

	* Added setuptools entry_points magic for twill-sh script.

2006-03-05  Titus Brown  <t@issola.caltech.edu>

	* SystemExit problems in the twill shell, fixed.

	* Added 'redirect_output' and 'reset_output'. (Norman Khine)

	* Fixed memory leak in reset_browser(). (Alexander Shvedunov)
